Login and generate jwt on success

--- a/NZWalks.Identity/appsettings.Development.json
+++ b/NZWalks.Identity/appsettings.Development.json
@@ -7,5 +7,10 @@
   },
   "ConnectionStrings": {
     "IdentityServerConnectionString": "Server=127.0.0.1,1433;Database=NZWalksIdentityDb;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "bbuosyJSSGPOosflUSJ75JJHst6yjjjST5rt65SY77uhSYSko098HHhgst",
+    "Issuer": "https://localhost:7126/",
+    "Audience": "https://localhost:7126/"
   }
 }
