Authorization,Inject token, Role Based Authorization

--- a/NZWalks.API/appsettings.json
+++ b/NZWalks.API/appsettings.json
@@ -3,5 +3,10 @@
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true",
     "NZWalksConnectionString": "Server=127.0.0.1,1433;Database=NZWalksDb;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=True"
 
+  },
+  "Jwt": {
+    "Key": "bbuosyJSSGPOosflUSJ75JJHst6yjjjST5rt65SY77uhSYSko098HHhgst",
+    "Issuer": "https://localhost:7126/",
+    "Audience": "https://localhost:7126/"
   }
 }
